crates/executor/src/tests/sql/logical_analyzer/casting/snapshots/date/query_to_date_cast_column_already_date.snap
---
source: crates/executor/src/tests/sql/logical_analyzer/casting/date.rs
description: "\"SELECT col::DATE FROM (SELECT '2024-04-03'::DATE AS col)\""
---
Ok(
    [
        "+------------+",
        "| col        |",
        "+------------+",
        "| 2024-04-03 |",
        "+------------+",
    ],
)
