crates/executor/src/tests/sql/logical_analyzer/casting/snapshots/date/query_to_date_cast_scalar.snap
---
source: crates/executor/src/tests/sql/logical_analyzer/casting/date.rs
description: "\"SELECT '03-April-2024'::DATE\""
---
Ok(
    [
        "+-----------------------+",
        "| Utf8(\"03-April-2024\") |",
        "+-----------------------+",
        "| 2024-04-03            |",
        "+-----------------------+",
    ],
)
